fix search field overflow (#548)

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -495,7 +495,7 @@ header nav input[type='search'].nav-search-input  {
   padding: 0 24px;
   min-height: 30px;
   height: 30px;
-  border-radius: 0;
+  border-radius: 15px;
   font-family: var(--mt-body-font-family);
   font-size: var(--mt-body-font-size-s);
   border: 2px solid var(--mt-header-search-input-color);
@@ -503,7 +503,7 @@ header nav input[type='search'].nav-search-input  {
   outline-offset: -2px;
   overflow: visible;
   display: inline-block;
-  width: 350px;
+  width: 310px;
   text-align: left;
   z-index: 1000;
 }
